--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: #f8fafc;
+    --background: #e2ebf3;
     --foreground: #f8fafc;
     --card: 0 0% 100%;
     --card-foreground: #ffffff;
@@ -37,7 +37,7 @@
   }
 
   main {
-    @apply bg-background;
+    background-color: var(--background);
   }
 
   main > * {
